style.css
*{
    font-family:'Courier New', Courier, monospace;
    scroll-behavior: smooth;
}

body {
    background-color: black;
}

nav {
    background-color: lightgreen;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

ul li {
    background-color: lightgreen;
    position: relative;
    margin: 0;
    list-style: none;
    display: inline-block;
    cursor: pointer;
}

a {
    text-decoration: none;
    background-color: lightgreen;
}

.header {
    background-color: lightgreen;
    width: 70%;
    margin: 0 auto;
    padding: 30px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

#icon:hover {
    transform: scale(1.2);
    transition: transform 0.3s ease;

}

.container {
    width: 76%;
    margin: 1px auto; /* Added margin to create space between header and container */
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
}

.column1, .column2, .column3 {
    background-color: lightgreen;
    width: 55%;
    border-radius: 10px;
    margin: 10px;
}

.column1 {
    padding-bottom: 5px;
    padding-top: 5px;
    padding-left: 50px;
    padding-right: 200px;
}

.column2 {
    padding-bottom: 5px;
    padding-top: 5px;
    padding-left: 50px;
    padding-right: 200px;
}

#language-icon:hover {
    transform: scale(1.2);
    transition: transform 0.3s ease;
}

.column3 {
    padding-bottom: 73px;
    padding-top: 5px;
    padding-left: 70px;
    padding-right: 110px;
}

#avatar {
    padding-top: 10px;
    display: block;
    margin: 0 auto;
    border-radius: 50%;
    width: 250px;
    height: 250px;
    object-fit: cover;
    text-align: center;
}

.experienceTab {
    background-color: lightgreen;
    width: 70%;
    margin: 0 auto;
    padding: 5px 30px  5px 30px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.experienceTab p {
    text-align: center;
    font-size: xx-large;
    font-family:'Courier New', Courier, monospace;
}

.experience {
    width: 74%;
    margin: 1px auto; /* Added margin to create space between header and container */
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
}

.tab1 {
    background-color: lightgreen;
    width: 40%;
    border-radius: 10px;
    margin-top: 10px;
    padding: 5px 85px 5px 10px; /* Adjusted padding for consistent spacing */
}

.tab1:hover {
    transform: scale(1.1);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.tab2 {
    background-color: lightgreen;
    width: 40%;
    border-radius: 10px;
    margin-top: 10px;
    margin-left: 10px; /* Added margin to create space between tabs */
    padding: 5px 85px 5px 10px; /* Adjusted padding for consistent spacing */
    pointer-events: none; /* Disabled pointer events to prevent hover effect */
}

.tab2:hover {
    transform: scale(1.1);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.experience #tab1img{
    padding: 10px;
    display: block;
    margin: 0 auto;
    border-radius: 20px;
    width: 460px;
    height: 250px;
    object-fit: cover;
    text-align: center;
}

.experience #tab2img{
    padding: 10px;
    display: block;
    margin: 0 auto;
    border-radius: 20px;
   /* width: 460px;
    height: 250px;*/
    width: 250px;
    height: 250px;
    object-fit: cover;
    text-align: center;
}

.tab1 p {
    text-align: right;
    font-size: large;
    font-family:'Courier New', Courier, monospace;
    display: inline;
}

.tab2 p {
    text-align: right;
    font-size: large;
    font-family:'Courier New', Courier, monospace;
    display: inline;
}

.contacttab {
    background-color: lightgreen;
    width: 70%;
    margin: 10px auto; /* Added margin to create space at the top */
    padding: 10px 30px 5px 30px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.contacttab p {
    text-align: center;
    font-size: xx-large;
    font-family:'Courier New', Courier, monospace;
}

.contact{
    width: 74%;
    margin: 1px auto; /* Added margin to create space between header and container */
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
}

.contactimg {
    background-color: lightgreen;
    width: 20%;
    border-radius: 10px;
    padding: 5px;
    display: block;
    height: 150px;
    width: 150px;
    padding: 0 0 0 0;
    object-fit: cover;
}

.contactimg img {
    border-radius: 10px;
    width: 150px;
    height: 150px;
    object-fit: cover;
}

.contactinfo {
    background-color: lightgreen;
    width:744px;
    border-radius: 10px;
    padding: 0 85px 0 10px; /* Adjusted padding for consistent spacing */
    height: 150px;
}

.contactinfo a {
    text-decoration: none;
    color: black;
    text-align: center;
    background-color: transparent;
}

.contactinfo a:hover {
    transform: scale(1.1);
    transition: transform 0.3s ease;
}

h2 + a {
    display: block;
    margin-top: 10px;
}

#icond, #icondd {
    padding-top: 5px;
    border-radius: 50%;
}

#icond:hover {
    transform: scale(1.2);
    transition: transform 0.3s ease;
}

#icondd:hover {
    transform: scale(1.2);
    transition: transform 0.3s ease;
}


#icond {
    margin-left: 350px;
}

.footer {
    background-color: lightgreen;
    width: 70%;
    margin: 10px auto; /* Added margin to create space at the top */
    padding: 10px 30px 5px 30px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

